@@ -108,7 +108,7 @@
 @property (nonatomic,readwrite) ccColor3B disabledColor;
 
 /** Label that is rendered. It can be any CCNode that implements the CCLabelProtocol */
-@property (nonatomic,readwrite,retain) CCNode<CCLabelProtocol, CCRGBAProtocol>* label;
+@property (nonatomic,readwrite,assign) CCNode<CCLabelProtocol, CCRGBAProtocol>* label;
 
 /** creates a CCMenuItemLabel with a Label, target and selector */
 +(id) itemWithLabel:(CCNode<CCLabelProtocol,CCRGBAProtocol>*)label target:(id)target selector:(SEL)selector;
@@ -220,12 +220,14 @@
 	CCNode<CCRGBAProtocol> *normalImage_, *selectedImage_, *disabledImage_;
 }
 
+// weak references
+
 /** the image used when the item is not selected */
-@property (nonatomic,readwrite,retain) CCNode<CCRGBAProtocol> *normalImage;
+@property (nonatomic,readwrite,assign) CCNode<CCRGBAProtocol> *normalImage;
 /** the image used when the item is selected */
-@property (nonatomic,readwrite,retain) CCNode<CCRGBAProtocol> *selectedImage;
+@property (nonatomic,readwrite,assign) CCNode<CCRGBAProtocol> *selectedImage;
 /** the image used when the item is disabled */
-@property (nonatomic,readwrite,retain) CCNode<CCRGBAProtocol> *disabledImage;
+@property (nonatomic,readwrite,assign) CCNode<CCRGBAProtocol> *disabledImage;
 
 /** creates a menu item with a normal and selected image*/
 +(id) itemFromNormalSprite:(CCNode<CCRGBAProtocol>*)normalSprite selectedSprite:(CCNode<CCRGBAProtocol>*)selectedSprite;
